# nasa_hackathon

./: .dockerignore  .env.template  Dockerfile  README.md  deployment.yaml  docker-compose.yaml  pyproject.toml
data/: PMC4964660.md  PMC5666799.md  PMC6387434.md  PMC7072278.md  test.md  test.xml
scripts/: article_class.py  build_graph.py  manual_test.py
src/nasa_hackathon/: app.py  ingest.py
